static/style.css
html, body {
  margin: 0;
  padding: 0;
  overflow: hidden;
}

:root {
  --colour_light_blue: rgba(205, 208, 249, 1);
  --colour_purple: rgba(130, 77, 132, 1);
  --colour_orange: rgba(189, 57, 57, 1);
  --colour_grey: rgba(217, 217, 217, 1);
  --colour_blue: rgba(94, 111, 218, 1);
  --colour_warn: rgba(255, 130, 0, 1);
  --colour_turquoise: rgba(184, 183, 153, 1);

  --size_circle: 2.8em;
}

.dancing-script-700 {
  font-family: "Dancing Script", cursive;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

.smooch-sans-700 {
  font-family: "Smooch Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

.fjalla-one {
  font-family: "Fjalla One", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.farsan {
  font-family: "Farsan", cursive;
  font-weight: 400;
  font-style: normal;
}

.bungee {
  font-family: "Bungee", sans-serif;
  font-weight: 400;
  font-style: normal;
}

body {
  background-color: var(--colour_light_blue);
  padding: 0;
}

.hide-scrollbar {
  /* For Internet Explorer and Edge */
  -ms-overflow-style: none;
  /* For Firefox */
  scrollbar-width: none;
}

/* For Chrome, Safari, Opera, and other WebKit browsers */
.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

.w3-button:hover {
  background-color: blue;
}

nav {
  position: sticky;
  position: top;
  padding: 1em;
  max-height: 42;
}

input {
  font-family: sans-serif;
}

input::placeholder {
  font-family: "Bungee", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.section_top {
  position: sticky;
  position: top;
}

.bar-light {
    /* Dark Mode: background-color: rgba(217, 217, 217, 1); */
    background-color: var(--colour_grey);
    position: sticky; top: 0;
    margin-left: 0%;
    margin-right: 0%;
}

.menu {
    background-color: var(--colour_purple);
    border-radius: calc(200px + 6vw);
    width: fit-content;
    padding: 0;
    display: flex;
}

.menu-item {
  padding: 0.5em;
  font-size: calc(0.6rem + 0.6vw);
  text-decoration: none;
  border-radius: 25px;
  background: none;
  cursor: pointer;
}

.bar-collum {
  display: grid;
  /* grid-template-columns: 0fr 5fr 7fr 2fr 0.21fr; */
  grid-template-columns: 5fr 10fr 1fr 1.85fr 0.1fr;
  gap: 2em;
  margin-bottom: 1em;
}

.half-circle {
  width: 100%;
  height: var(--size_circle);
  width: var(--size_circle);
  border-radius: 50%;
  background: linear-gradient(to right, black 50%, white 50%);
  border: 1px solid black;
}

.navigation-collum {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 2fr;
  padding-left: 1em;
  padding-right: 1em;
}

.white {
  color: white;
}

input {
  max-height: 2em;
}

.menu-login {
  justify-content: flex-end;
  margin-left: auto;
  position: relative;
}

.home-image {
  display: block;
  transform: scaleX(-1);
  width: 100%;
  height: auto;
  /* max-height: 30em; */
  overflow: hidden;
}

.background-img-container {
  background-image: url('images/zella-mehlis-header-freizeit-einrichtungen-bibliothek-by-paul-hentschel-photography-by-ph-enterprise.jpg');
  background-size: cover;
  background-position: center;
  height: 400px;
  display: flex;
  padding: 3em;
  position: relative;
  min-height: fit-content;
}

.white-background {
  width: clamp(732px, 34vw, 1600px);
  border-radius: 25px;
  margin: 0;
  padding: 1em;
  height: fit-content;
  background-color: rgba(255,255,255,0.5)
}

.explore-button {
  background-color: var(--colour_orange);
  height: fit-content;
  position: absolute;
  top: 72.5%;
  right: 10%;
  border-radius: 25px;
  padding-right: 0.8em;
  padding-left: 0.8em;
  text-decoration: none;
  color: white;
}

.az-two-collum {
  display: grid;
  grid-template-columns: 1fr 16fr;
  height: 100vh;
  padding-right: 0;
}

.az-list-container {
  min-height: 100vh;
  min-width: 70px;
  height: 100%;
  background-color: white;
  overflow-y: auto;
}

.az-list {
  padding-left: 43%;
  padding-top: 1em;
  margin: 0;
  list-style-type: none;
  background-color: white;
  position: sticky; top: 107.28px;
  padding-bottom: 1em;
}

.az-list-item {
  font-size: larger;
  text-decoration: none;
  color: black;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
}

.az-list-item.active {
  font-weight: bold;
  color: var(--colour_orange);
  background-color: rgba(189, 57, 57, 0.15);
  padding: 0.25em 0.5em;
  border-radius: 4px;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 2em;
  overflow-y: auto;
  scroll-behavior: smooth;
  padding-bottom: 9em;
}

.grid-item {
  padding: 1em;
  margin-top: 1em;
  margin-bottom: 1em;
  border-radius: 25px;
  text-decoration: none;
  background-color: var(--colour_blue);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.grid-item-image {  
  position: relative;
  overflow: hidden;
}

.grid-item-image img {
  display: block;
  width: 100%;
  height: auto;
}

.grid-item-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.6);
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
}

.grid-item-overlay span {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  width: 90%;
  color: white;
  font-size: xx-large;
}

.grid-item-image:hover .grid-item-overlay {
  opacity: 1;
  transition: opacity 0s;
}

.search-bar {
  width: 100%;
  display: flex;
}

.search-input-container {
  width: 100%;
  display: flex;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

.search-input {
  flex: 1;
  min-width: 0;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

.search-button {
  padding: 0;
  padding-right: 0.2em;
  padding-left: 0.2em;
  margin: 0;
  background-color: white;
  height: 30px;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}

.search-error {
  margin: 3em;
  padding: 1em;
  border-radius: 25px;
  font-size: calc(1em + 0.8vw);
  background-color: var(--colour_orange);
}

.login-panel {
  margin-top: 3vh;
  padding: 4vw;
  border-radius: 25px;
  background-color: var(--colour_blue);
  text-align: center;
}

.welcome-message {
  background-color: var(--colour_turquoise);
  display: flex;
  padding-left: 50%;
}

.welcome-message-text {
 font-size: calc(1rem + 1vw);
 padding: 0;
 margin: 1%;
}

.error-message {
  display: flex;
  justify-content: center;
  border-radius: 10px;
  background-color: var(--colour_orange);
  margin-bottom: 1em;
  width: 100%;
}

.login-form {
  display: inline-block;
  text-align: center;
}

.submit-btn {
  background-color: var(--colour_purple);
  border-radius: 6px;
}

.form-group {
  margin: 0.25em;
}

.strength-meter {
  margin-top: 5px;
  /* background-color: white; */
  overflow: hidden;
}

.strength-text {
  margin-top: 5px;
  background-color: rgb(219, 219, 219);
  padding: 2px;
}

.error-messages {
  background-color: var(--colour_warn);
  border-radius: 15px;
}

.menuDropdown {
  position: relative;
  display: inline-block;
}

.menuDropdown-content {
  display: none;
  position: absolute;
  background-color: var(--colour_purple);
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  border-radius: 20px;
}

.menuDropdown-content a{
  color: white;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.show {display: block;}

.flat-left {border-top-left-radius: 0; border-bottom-left-radius: 0;}

.flat-top-right {border-top-right-radius: 0;}

